# SsagePass

./: .gitignore  README.md  Windows.md
Obfuscation/: CMakeLists.txt
Obfuscation/include/: BogusControlFlow.h  Flattening.h  FlatteningEnhanced.h  HikariStringEncryption.h  IPObfuscationContext.h  IndirectCall.h  LegacyLowerSwitch.h  MBAObfuscation.h  StringEncryption.h  Utils.h  VMFlatten.h
Obfuscation/include/compat/: CallSite.h
Obfuscation/src/: BogusControlFlow.cpp  Flattening.cpp  FlatteningEnhanced.cpp  FunctionWrapper.cpp  HikariStringEncryption.cpp  IPObfuscationContext.cpp  IndirectBranch.cpp  IndirectCall.cpp  LegacyLowerSwitch.cpp  MBAObfuscation.cpp  MBAUtils.cpp  PMRegistration.cpp  StringEncryption.cpp  Utils.cpp  VMFlatten.cpp
Obfuscation/tests/: CMakeLists.txt  helloworld  helloworld.cpp
